--- a/docker-compose.develop.yaml
+++ b/docker-compose.develop.yaml
@@ -9,7 +9,7 @@ services:
       - ./bot:/project/bot
 
   db:
-    image: postgres
+    image: postgres:17
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
