--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -8,7 +8,7 @@ services:
 
 
   db:
-    image: postgres
+    image: postgres:17
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
